# MEDDOWBOT

./: .env.example  .gitignore  GEMINI.md  README.md  ULTIMATE_BUILD_PLAN.md  fix_reddit.py  meddowbot_smoke.py  pyproject.toml  reproduce_issue.py  test_alias.py  test_alias_path.py  test_alias_path_2.py  test_alias_path_3.py  test_alias_robust.py  test_dotenv_scrub.py  test_explicit_aliases.py  test_explicit_working.py  test_nested_alias.py  test_reddit_json.py  test_robust_source.py  test_scrub.py  test_union.py  test_validator.py  verify_fix.py  youtube.txt
.gemini/agents/: analyzer.md  builder.md  debug-agent.md  docker-agent.md  git-agent.md  planner.md  security-agent.md  tester.md
.gemini/skills/meddowbot-docker/: SKILL.md
.gemini/skills/meddowbot-git/: SKILL.md
.gemini/skills/meddowbot-python/: SKILL.md
.gemini/skills/meddowbot-testing/: SKILL.md
bot/: main.py
cache/: client.py  progress.py  rate_limiter.py
config/: settings.py
database/: crud.py  models.py  session.py
docker/: Dockerfile  docker-compose.yml
docker/caddy/: Caddyfile
docker/prometheus/: prometheus.yml
docs/: ADMIN_GUIDES.md
handlers/: __init__.py  admin.py  admin_states.py  cancel.py  download.py  history.py  reddit.py  settings.py  start.py
middleware/: auth.py  logging.py  rate_limit.py  ssrf.py
migrations/: env.py
migrations/versions/: 17be663c2123_initial_schema.py  8ce082938721_add_upload_as_video_to_user_settings.py  b88a3ffca6cb_add_missing_columns_to_user_settings.py
observability/: logging.py  metrics.py
queues/: broker.py
task_queue/: broker.py
tests/: conftest.py
tests/middleware/: test_auth.py  test_logging.py  test_rate_limit.py  test_ssrf.py
tests/utils/: test_cookies.py  test_proxy.py  test_ytdlp.py
tests/workers/: test_preflight.py
utils/: admin.py  archiver.py  bot.py  cookies.py  ffmpeg.py  notify.py  proxy.py  quota.py  system.py  upload.py  ytdlp.py
workers/: download.py  preflight.py
