[project]
name = "meddowbot"
version = "1.0.0"
description = "Production-grade async Telegram media downloader bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.13.1",
    "aiohttp==3.10.10",
    "taskiq==0.11.7",
    "taskiq-redis==0.5.6",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "aiosqlite==0.17.0",
    "alembic==1.14.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "redis[hiredis]==5.2.0",
    "yt-dlp==2024.12.13",
    "aiofiles==24.1.0",
    "asyncpraw==7.8.1",
    "structlog==24.4.0",
    "prometheus-client==0.21.0",
    "httpx==0.28.0",
    "python-magic==0.4.27",
]
